--- a/TutorialApplication/Base.lproj/Main.storyboard
+++ b/TutorialApplication/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h3E-1d-ZDX">
-                                <rect key="frame" x="164" y="364" width="46" height="30"/>
+                                <rect key="frame" x="164" y="403" width="46" height="30"/>
                                 <state key="normal" title="Save"/>
                                 <connections>
                                     <action selector="addNewEmployee" destination="uWu-zi-wjV" eventType="touchUpInside" id="RPU-Ps-923"/>
@@ -74,30 +74,60 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="dateOfBirth" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LVe-ef-q0p">
+                                <rect key="frame" x="108" y="352" width="251" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="1pa-9h-qBQ"/>
+                                    <constraint firstAttribute="width" constant="251" id="Tdm-2k-kcQ"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="uWu-zi-wjV" id="U9l-DR-3H3"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="dayOfBirth:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BEJ-N1-axv">
+                                <rect key="frame" x="16" y="357" width="80" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="3fx-6l-Xb7"/>
+                                    <constraint firstAttribute="width" constant="80" id="ZCh-L2-k66"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="1BF-an-wJ9" secondAttribute="trailing" constant="16" id="0oS-R5-mMA"/>
+                            <constraint firstItem="BEJ-N1-axv" firstAttribute="leading" secondItem="BFv-Kp-wvK" secondAttribute="leading" constant="16" id="3Rs-yK-gbB"/>
                             <constraint firstItem="ckV-KN-g0W" firstAttribute="leading" secondItem="ujJ-Ev-BwV" secondAttribute="trailing" constant="12" id="4Xl-za-YWV"/>
                             <constraint firstItem="U4v-pz-JBd" firstAttribute="leading" secondItem="0CN-CM-stu" secondAttribute="trailing" constant="12" id="EZD-Xm-ZpH"/>
+                            <constraint firstItem="BEJ-N1-axv" firstAttribute="top" secondItem="ejx-cj-4hi" secondAttribute="bottom" constant="35" id="GBr-NS-n4Q"/>
                             <constraint firstItem="ejx-cj-4hi" firstAttribute="leading" secondItem="BFv-Kp-wvK" secondAttribute="leading" constant="16" id="HsC-1D-PG1"/>
                             <constraint firstItem="0CN-CM-stu" firstAttribute="top" secondItem="ujJ-Ev-BwV" secondAttribute="bottom" constant="36" id="I2O-OZ-HaO"/>
+                            <constraint firstItem="h3E-1d-ZDX" firstAttribute="leading" secondItem="BFv-Kp-wvK" secondAttribute="leading" constant="164" id="Kbj-Xu-GV3"/>
                             <constraint firstAttribute="trailing" secondItem="U4v-pz-JBd" secondAttribute="trailing" constant="16" id="LUW-bi-6qZ"/>
                             <constraint firstItem="ejx-cj-4hi" firstAttribute="top" secondItem="0CN-CM-stu" secondAttribute="bottom" constant="38" id="NDU-Bz-XRP"/>
                             <constraint firstItem="U4v-pz-JBd" firstAttribute="top" secondItem="ckV-KN-g0W" secondAttribute="bottom" constant="25" id="QcU-wS-eXA"/>
-                            <constraint firstItem="h3E-1d-ZDX" firstAttribute="leading" secondItem="BFv-Kp-wvK" secondAttribute="leading" constant="164" id="T9x-Om-Qiu"/>
+                            <constraint firstItem="LVe-ef-q0p" firstAttribute="leading" secondItem="BEJ-N1-axv" secondAttribute="trailing" constant="12" id="ShS-TW-zNl"/>
+                            <constraint firstItem="wi2-1v-0mZ" firstAttribute="top" secondItem="h3E-1d-ZDX" secondAttribute="bottom" constant="234" id="TL4-VB-OJU"/>
+                            <constraint firstItem="h3E-1d-ZDX" firstAttribute="top" secondItem="LVe-ef-q0p" secondAttribute="bottom" constant="21" id="Yc1-pB-yET"/>
                             <constraint firstAttribute="trailing" secondItem="h3E-1d-ZDX" secondAttribute="trailing" constant="165" id="bd2-b6-Cm0"/>
                             <constraint firstItem="ujJ-Ev-BwV" firstAttribute="leading" secondItem="BFv-Kp-wvK" secondAttribute="leading" constant="16" id="brz-At-ejc"/>
                             <constraint firstItem="1BF-an-wJ9" firstAttribute="top" secondItem="U4v-pz-JBd" secondAttribute="bottom" constant="29" id="eoI-P1-29l"/>
                             <constraint firstItem="ujJ-Ev-BwV" firstAttribute="top" secondItem="nIO-pH-BVn" secondAttribute="bottom" constant="121" id="gl3-cW-krs"/>
                             <constraint firstItem="0CN-CM-stu" firstAttribute="leading" secondItem="BFv-Kp-wvK" secondAttribute="leading" constant="16" id="gte-yh-Hd8"/>
+                            <constraint firstAttribute="trailing" secondItem="LVe-ef-q0p" secondAttribute="trailing" constant="16" id="jRB-TU-Zcv"/>
                             <constraint firstItem="ckV-KN-g0W" firstAttribute="top" secondItem="nIO-pH-BVn" secondAttribute="bottom" constant="118" id="peY-TF-FtF"/>
-                            <constraint firstItem="h3E-1d-ZDX" firstAttribute="top" secondItem="1BF-an-wJ9" secondAttribute="bottom" constant="38" id="tHb-a0-VQM"/>
                             <constraint firstAttribute="trailing" secondItem="ckV-KN-g0W" secondAttribute="trailing" constant="16" id="uEC-JF-r9o"/>
                             <constraint firstItem="1BF-an-wJ9" firstAttribute="leading" secondItem="ejx-cj-4hi" secondAttribute="trailing" constant="12" id="uTf-Vq-MV5"/>
+                            <constraint firstItem="LVe-ef-q0p" firstAttribute="top" secondItem="1BF-an-wJ9" secondAttribute="bottom" constant="26" id="w4F-a6-yCJ"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="dateOfBirthTextField" destination="LVe-ef-q0p" id="BWV-yX-o0v"/>
                         <outlet property="firstNameTextField" destination="ckV-KN-g0W" id="rCx-9z-L8E"/>
                         <outlet property="lastNameTextField" destination="U4v-pz-JBd" id="GEw-ww-GHH"/>
                         <outlet property="salaryTextField" destination="1BF-an-wJ9" id="GtL-0F-I79"/>
@@ -105,7 +135,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ifv-4s-boW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-378.39999999999998" y="-717.39130434782612"/>
+            <point key="canvasLocation" x="-378.5" y="-717.5"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="3nc-AV-TvD">
@@ -120,7 +150,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="45"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pq6-KJ-TXb" id="5CY-UM-ldG">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -163,21 +193,31 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="DayOfBirth Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0zu-wc-OKB">
+                                <rect key="frame" x="24" y="91" width="327" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="0zu-wc-OKB" firstAttribute="top" secondItem="QlA-k2-UoX" secondAttribute="bottom" constant="27" id="6ZD-6D-lqM"/>
+                            <constraint firstAttribute="trailing" secondItem="0zu-wc-OKB" secondAttribute="trailing" constant="24" id="7Y6-00-tSl"/>
                             <constraint firstItem="3vx-qe-fBW" firstAttribute="centerY" secondItem="fa4-vU-wbu" secondAttribute="centerY" id="8Xy-iL-TGr"/>
                             <constraint firstItem="3vx-qe-fBW" firstAttribute="centerX" secondItem="fa4-vU-wbu" secondAttribute="centerX" id="GB3-bW-eZs"/>
+                            <constraint firstItem="0zu-wc-OKB" firstAttribute="leading" secondItem="fa4-vU-wbu" secondAttribute="leading" constant="24" id="jMK-Qm-7L4"/>
                             <constraint firstItem="3vx-qe-fBW" firstAttribute="leading" secondItem="fa4-vU-wbu" secondAttribute="leadingMargin" constant="8" id="kp2-uA-Bgg"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="dayOfBirthLabel" destination="0zu-wc-OKB" id="MlB-mZ-fwx"/>
                         <outlet property="salaryLabel" destination="3vx-qe-fBW" id="sjh-ZK-Huq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="glr-QR-gg3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="345" y="-61"/>
+            <point key="canvasLocation" x="344.80000000000001" y="-61.619190404797607"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="bdm-dN-4f7">
