--- a/TutorialApplication/Base.lproj/Main.storyboard
+++ b/TutorialApplication/Base.lproj/Main.storyboard
@@ -43,16 +43,27 @@
                                     <action selector="fetchOrganizations" destination="XdH-8A-9fa" eventType="touchUpInside" id="75v-zi-QLU"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HmR-Bz-c2X">
+                                <rect key="frame" x="112" y="410" width="151" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <state key="normal" title="Calc 10000th prime number"/>
+                                <connections>
+                                    <action selector="onCalculatePrimeNumber" destination="XdH-8A-9fa" eventType="touchUpInside" id="gUL-JA-UBf"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="4Yl-dU-LRr" firstAttribute="leading" secondItem="EjI-o9-4dl" secondAttribute="leading" constant="112" id="0vz-XS-e41"/>
+                            <constraint firstItem="HmR-Bz-c2X" firstAttribute="leading" secondItem="EjI-o9-4dl" secondAttribute="leading" constant="112" id="6Tb-bs-pAO"/>
                             <constraint firstItem="aXQ-gu-oaf" firstAttribute="leading" secondItem="EjI-o9-4dl" secondAttribute="leading" constant="112" id="HBX-pn-Ccg"/>
                             <constraint firstAttribute="trailing" secondItem="uSW-8S-LST" secondAttribute="trailing" constant="112" id="NpV-jh-jRZ"/>
                             <constraint firstItem="aXQ-gu-oaf" firstAttribute="top" secondItem="uSW-8S-LST" secondAttribute="bottom" constant="16" id="RrU-I4-X5C"/>
                             <constraint firstAttribute="trailing" secondItem="4Yl-dU-LRr" secondAttribute="trailing" constant="112" id="Ton-LZ-frW"/>
                             <constraint firstItem="uSW-8S-LST" firstAttribute="leading" secondItem="EjI-o9-4dl" secondAttribute="leading" constant="112" id="dYC-Ac-kWZ"/>
                             <constraint firstItem="4Yl-dU-LRr" firstAttribute="top" secondItem="mjR-if-42W" secondAttribute="bottom" constant="208" id="e2K-7Y-GEK"/>
+                            <constraint firstItem="HmR-Bz-c2X" firstAttribute="top" secondItem="aXQ-gu-oaf" secondAttribute="bottom" constant="16" id="mS2-Fh-9xt"/>
+                            <constraint firstAttribute="trailing" secondItem="HmR-Bz-c2X" secondAttribute="trailing" constant="112" id="odA-e1-Zmk"/>
                             <constraint firstItem="uSW-8S-LST" firstAttribute="top" secondItem="4Yl-dU-LRr" secondAttribute="bottom" constant="16" id="ute-LG-2mq"/>
                             <constraint firstAttribute="trailing" secondItem="aXQ-gu-oaf" secondAttribute="trailing" constant="112" id="utl-XQ-sHF"/>
                         </constraints>
